clusters/cosmos/apps/postgres/main-cluster/ingress-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: postgres-ingress
spec:
 tls:
 - hosts:
   - postgres.cosmos.cboxlab.com
   secretName: postgres-tls-secret
 rules:
 - host: postgres.cosmos.cboxlab.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: main
           port:
             name: postgresql
