clusters/cosmos/apps/postgres/main-cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: pgweb-ingress
spec:
 ingressClassName: public
 tls:
 - hosts:
   - pgweb.cosmos.cboxlab.com
   secretName: pgweb-tls-secret
 rules:
 - host: pgweb.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: pgweb
           port:
             name: http
       path: /
       pathType: Prefix
